--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,54 @@
-.App {
-  text-align: center;
+.app {
+  background: #209cee;
+  padding: 30px;
+  
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
+.todo-list {
+  background: #e8e8e8;
+  border-radius: 4px;
+  padding: 15px;
+  max-width: 400px;
+  margin:auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo {
+  background: #fff;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  padding: 4px 25px;
+  font-size: 18px;
+  color:rgba(129, 129, 129, 0.87);
+  margin-bottom: 6px;
+  border-radius: 3px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #09d3ac;
+input[type="text"] {
+ width:100%;
+ border:none;
+ padding-top: 10px;
+ border-bottom: 3px solid gray;
+ font-size: 16px;
+ text-align: center;
+
+}
+
+button {
+  border-radius: 6px;
+  color:white;
+  background-color:cornflowerblue;
+  padding:6px;
+  font-size:14px;
+}
+
+
+.del {
+
+  background-color:rgb(255, 91, 91);
+  margin-left: 3px;
+  
+ 
 }
